--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -20,53 +20,25 @@
   tags:
     - bootstrap_any
 
-- hosts: "{{ hosts }}"
-  become: yes
-  ignore_unreachable: yes
-  vars_files:
-    - "{{inventory_dir}}/secrets.yml"
-  roles:
-    - role: azure-cli
-  tags:
-    - azure_cli
 
-- hosts: "{{ hosts }}"
-  become: yes
-  ignore_unreachable: yes
-  vars_files:
-    - "{{inventory_dir}}/secrets.yml"
-  roles:
-    - role: gcloud-cli
-  tags:
-    - gcloud_cli
 
-- hosts: "{{ hosts }}"
-  become: yes
-  ignore_unreachable: yes
-  vars_files:
-    - "{{inventory_dir}}/secrets.yml"
-  roles:
-    - role: aws-cli
-  tags:
-    - aws_cli
+# - hosts: "{{ hosts }}"
+#   become: yes
+#   ignore_unreachable: yes
+#   vars_files:
+#     - "{{inventory_dir}}/secrets.yml"
+#   roles:
+#     - role: oci-cli
+#   tags:
+#     - oci_cli
 
-- hosts: "{{ hosts }}"
-  become: yes
-  ignore_unreachable: yes
-  vars_files:
-    - "{{inventory_dir}}/secrets.yml"
-  roles:
-    - role: oci-cli
-  tags:
-    - oci_cli
-
-- hosts: "{{ hosts| default('all') }}"
-  become: yes
-  gather_facts: no
-  ignore_unreachable: yes
-  vars_files:
-    - "{{inventory_dir}}/secrets.yml"
-  roles:
-    - vm-agents-nodeexporter
-  tags:
-    - node_exporter
+# - hosts: "{{ hosts| default('all') }}"
+#   become: yes
+#   gather_facts: no
+#   ignore_unreachable: yes
+#   vars_files:
+#     - "{{inventory_dir}}/secrets.yml"
+#   roles:
+#     - vm-agents-nodeexporter
+#   tags:
+#     - node_exporter
