--- a/ansible/inventory/env/group_vars/all.yml
+++ b/ansible/inventory/env/group_vars/all.yml
@@ -534,7 +534,7 @@ cassandra_cluster_size: "{{ groups['cassandra'] | length }}"
 # This value is constant for sendgrid api authentication.
 # If you're using any other mail server provider, override this value in common.yaml.
 mail_server_username: "apikey"
-bootstrap_namespace: "{{ namespace }},flink-{{ namespace }},flink-kp-{{ namespace }}"
+bootstrap_namespace: "{{ namespace }}"
 
 # Graylog vars shared across multiple roles
 graylog_open_to_public: false
