--- a/kubernetes/pipelines/sunbird-RC/Jenkinsfile
+++ b/kubernetes/pipelines/sunbird-RC/Jenkinsfile
@@ -18,17 +18,22 @@ node() {
         }
 
         stage('deploy') {
-            values = docker_params()
+            // values = docker_params()
+            values = [:]
+            envDir = sh(returnStdout: true, script: "echo $JOB_NAME").split('/')[-3].trim()
+            module = sh(returnStdout: true, script: "echo $JOB_NAME").split('/')[-2].trim()
             jobName = sh(returnStdout: true, script: "echo $JOB_NAME").split('/')[-1].trim().toLowerCase()
-            currentWs = sh(returnStdout: true, script: 'pwd').trim()
+            currentWs = sh(returnStdout: true, script: 'pwd').trim()            
             ansiblePlaybook = "$currentWs/kubernetes/ansible/deploy_core_service.yml"
-            ansibleExtraArgs = "--extra-vars \"chart_path=${currentWs}/kubernetes/helm_charts/sunbird-RC/$jobName release_name=$jobName image_tag=$values.image_tag image_name=$values.image_name role_name=${params.role_name}\" --vault-password-file /var/lib/jenkins/secrets/vault-pass"
+            ansibleExtraArgs = "--extra-vars \"chart_path=${currentWs}/kubernetes/helm_charts/sunbird-RC/$jobName release_name=$jobName image_tag=${params.image_name} image_name=${params.image_name} role_name=${params.role_name}\" --vault-password-file /var/lib/jenkins/secrets/vault-pass"
+            values.put('env', envDir)
+            values.put('module', module)        
             values.put('currentWs', currentWs)
             values.put('ansiblePlaybook', ansiblePlaybook)
             values.put('ansibleExtraArgs', ansibleExtraArgs)
             ansible_playbook_run(values)
             archiveArtifacts 'metadata.json'
-            currentBuild.description = "Image: ${values.image_tag}, Private: ${params.private_branch}, Public: ${params.branch_or_tag}"
+            currentBuild.description = "Image: ${params.image_tag}, Private: ${params.private_branch}, Public: ${params.branch_or_tag}"
         }
          summary()
      }
