--- a/kubernetes/helm_charts/sunbird-RC/keycloak/templates/deployment.yaml
+++ b/kubernetes/helm_charts/sunbird-RC/keycloak/templates/deployment.yaml
@@ -34,7 +34,13 @@ spec:
 {{ toYaml .Values.resources | indent 10 }}
         ports:
         - containerPort: {{ .Values.network.port }}
-        
+         volumeMounts:
+        - name: {{ .Chart.Name }}-conf
+          mountPath: /opt/jboss/keycloak/imports/
+      volumes:
+      - name: {{ .Chart.Name }}-conf
+        configMap:
+          name: {{ .Chart.Name }}-conf       
 
 ---
 apiVersion: v1
