--- a/kubernetes/pipelines/sunbird-RC/Jenkinsfile
+++ b/kubernetes/pipelines/sunbird-RC/Jenkinsfile
@@ -32,7 +32,7 @@ node() {
             values.put('ansiblePlaybook', ansiblePlaybook)
             values.put('ansibleExtraArgs', ansibleExtraArgs)
             ansible_playbook_run(values)
-            archiveArtifacts 'metadata.json'
+            // archiveArtifacts 'metadata.json'
             currentBuild.description = "Image: ${params.image_tag}, Private: ${params.private_branch}, Public: ${params.branch_or_tag}"
         }
          summary()
