update keycloak port
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/kubernetes/helm_charts/sunbird-RC/keycloak/templates/deployment.yaml
+++ b/kubernetes/helm_charts/sunbird-RC/keycloak/templates/deployment.yaml
@@ -34,6 +34,20 @@ spec:
 {{ toYaml .Values.resources | indent 10 }}
         ports:
         - containerPort: {{ .Values.network.port }}
+        readinessProbe:
+          httpGet:
+            path: /auth/
+            port: {{ .Values.network.port }}
+          failureThreshold: 10
+          periodSeconds: 30
+          timeoutSeconds: 10
+          initialDelaySeconds: 30
+        livenessProbe:
+          tcpSocket:
+            port: {{ .Values.network.port }}
+          initialDelaySeconds: 15
+          periodSeconds: 30
+          failureThreshold: 10
         volumeMounts:
         - name: {{ .Chart.Name }}-conf
           mountPath: /opt/jboss/keycloak/imports/
