--- a/kubernetes/ansible/bootstrap_minimal.yaml
+++ b/kubernetes/ansible/bootstrap_minimal.yaml
@@ -35,20 +35,20 @@
     #   when: imagepullsecrets|length > 0
     #   with_items:
     #     - "{{ bootstrap_namespace.split(',') }}"
-    # - name: Creating domain ssl
-    #   shell: 
-    #     cmd: |
-    #       cat <<EOF | kubectl apply -f -
-    #       apiVersion: v1
-    #       kind: Secret
-    #       metadata:
-    #         name: ingress-cert
-    #         namespace: "{{ bootstrap_namespace.split(',')[0] }}"
-    #       data:
-    #         ca.crt: ""
-    #         site.crt: "{{ core_vault_proxy_site_crt | b64encode }}"
-    #         site.key: "{{ core_vault_proxy_site_key | b64encode }}"
-    #       EOF
+    - name: Creating domain ssl
+      shell: 
+        cmd: |
+          cat <<EOF | kubectl apply -f -
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: ingress-cert
+            namespace: "{{ bootstrap_namespace.split(',')[0] }}"
+          data:
+            ca.crt: ""
+            site.crt: "{{ core_vault_proxy_site_crt | b64encode }}"
+            site.key: "{{ core_vault_proxy_site_key | b64encode }}"
+          EOF
     # - name: Creating domain ssl
     #   shell:
     #     cmd: |
