--- a/kubernetes/pipelines/deploy_core/Jenkinsfile
+++ b/kubernetes/pipelines/deploy_core/Jenkinsfile
@@ -26,6 +26,8 @@ node() {
             currentWs = sh(returnStdout: true, script: 'pwd').trim()
             ansiblePlaybook = "$currentWs/kubernetes/ansible/deploy_core_service.yml"
             ansibleExtraArgs = "--extra-vars \"chart_path=${currentWs}/kubernetes/helm_charts/core/$jobName release_name=$jobName image_tag=${params.image_tag} image_name=${params.image_name} role_name=${params.role_name}\" --vault-password-file /var/lib/jenkins/secrets/vault-pass"
+            values.put('env', envDir)
+            values.put('module', module) 
             values.put('currentWs', currentWs)
             values.put('ansiblePlaybook', ansiblePlaybook)
             values.put('ansibleExtraArgs', ansibleExtraArgs)
