updated keycloak template
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/kubernetes/ansible/roles/helm-deploy/tasks/main.yml
+++ b/kubernetes/ansible/roles/helm-deploy/tasks/main.yml
@@ -19,6 +19,14 @@
     src: "{{ item }}"
     dest: "{{ item }}"
   with_fileglob:
+    - "{{ chart_path }}/config/*.json"
+  when: release_name == "keycloak"
+
+- name: template schema json
+  template:
+    src: "{{ item }}"
+    dest: "{{ item }}"
+  with_fileglob:
     - "{{ chart_path }}/schemas/*.json"
   when: release_name == "registry"
 
