--- a/kubernetes/helm_charts/sunbird-RC/claim-ms/templates/configmap.yaml
+++ b/kubernetes/helm_charts/sunbird-RC/claim-ms/templates/configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  {{- range $key, $val := .Values.claim-msenv }}
+  {{- range $key, $val := .Values.claim_msenv }}
   {{ $key }}: |-
 {{ $val| indent 4 }}
   {{- end }}
