disabled template compy for registry
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/kubernetes/ansible/roles/helm-deploy/tasks/main.yml
+++ b/kubernetes/ansible/roles/helm-deploy/tasks/main.yml
@@ -22,13 +22,13 @@
     - "{{ chart_path }}/configs/*.json"
   when: release_name == "keycloak"
 
-- name: template schema json
-  template:
-    src: "{{ item }}"
-    dest: "{{ item }}"
-  with_fileglob:
-    - "{{ chart_path }}/schemas/*.json"
-  when: release_name == "registry"
+# - name: template schema json
+#   template:
+#     src: "{{ item }}"
+#     dest: "{{ item }}"
+#   with_fileglob:
+#     - "{{ chart_path }}/schemas/*.json"
+#   when: release_name == "registry"
 
 - name: template config json
   template:
