--- a/kubernetes/helm_charts/sunbird-RC/elasticsearch/Chart.yaml
+++ b/kubernetes/helm_charts/sunbird-RC/elasticsearch/Chart.yaml
@@ -1,5 +1,11 @@
-apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
+description: Official Elastic helm chart for Elasticsearch
+home: https://github.com/elastic/helm-charts
+maintainers:
+- email: helm-charts@elastic.co
+  name: Elastic
 name: elasticsearch
-version: 0.1.0
+version: 7.3.2
+appVersion: 7.3.2
+sources:
+  - https://github.com/elastic/elasticsearch
+icon: https://helm.elastic.co/icons/elasticsearch.png
