--- a/kubernetes/helm_charts/sunbird-RC/filestorage/templates/deployment.yaml
+++ b/kubernetes/helm_charts/sunbird-RC/filestorage/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
         - /bin/bash
         - -c
         args:
-        - minio server --address 0.0.0.0:9000 --console-address 0.0.0.0:9001 /data
+        - server --address 0.0.0.0:9000 --console-address 0.0.0.0:9001 /data
         volumeMounts:
         - mountPath: /data
           name: {{ .Chart.Name }}-pvc
