--- a/kubernetes/ansible/roles/istio/tasks/main.yml
+++ b/kubernetes/ansible/roles/istio/tasks/main.yml
@@ -16,9 +16,9 @@
   shell: helm repo update
 
 - name: helm install istio-base
-  shell: kubectl config use-context {{item}} && helm install istio-base istio/base -n {{namespace}} --create-namespace --set defaultRevision=default --wait 10
+  shell: kubectl config use-context {{item}} && helm install istio-base istio/base -n istio-system --create-namespace --set defaultRevision=default --wait 10
   loop: "{{ctx_clusters}}"
 
 - name: helm install istiod
-  shell: kubectl config use-context {{item}} && helm install istiod istio/istiod  -n {{namespace}} --create-namespace --wait
+  shell: kubectl config use-context {{item}} && helm install istiod istio/istiod  -n istio-system --create-namespace --wait
   loop: "{{ctx_clusters}}"
