updated ansible playbook
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/kubernetes/ansible/bootstrap_istio.yaml
+++ b/kubernetes/ansible/bootstrap_istio.yaml
@@ -12,8 +12,9 @@
     - "{{inventory_dir}}/secrets.yml"
   tasks:
     - name: Creating namespace
-      shell: "kubectl create namespace istio-system "
+      shell: "kubectl create namespace istio-system --context={{item}}"
       ignore_errors: yes
+      loop: "{{ctx_clusters}}"
 
     - name: Creating istio trust plugin ca secrets in {{ctx_cluster1}}
       shell: 
