--- a/kubernetes/ansible/istio_multi_primary.yaml
+++ b/kubernetes/ansible/istio_multi_primary.yaml
@@ -42,7 +42,7 @@
           EOF
 
     - name: Install a remote secret in {{ctx_cluster2}} that provides access to {{ctx_cluster1}} API server.
-      shell: "istioctl x create-remote-secret --context="${CTX_CLUSTER1}" --name=cluster1 | kubectl apply -f - --context="${CTX_CLUSTER2}""
+      shell: "istioctl x create-remote-secret --context=${CTX_CLUSTER1} --name=cluster1 | kubectl apply -f - --context=${CTX_CLUSTER2}"
 
     - name: Install a remote secret in {{ctx_cluster1}} that provides access to {{ctx_cluster2}} API server.
-      shell: "istioctl x create-remote-secret --context="${CTX_CLUSTER2}" --name=cluster2 | kubectl apply -f - --context="${CTX_CLUSTER1}""
+      shell: "istioctl x create-remote-secret --context=${CTX_CLUSTER2} --name=cluster2 | kubectl apply -f - --context=${CTX_CLUSTER1}"
