--- a/kubernetes/pipelines/deploy_longhorn/Jenkinsfile
+++ b/kubernetes/pipelines/deploy_longhorn/Jenkinsfile
@@ -24,7 +24,7 @@ node() {
             jobName = sh(returnStdout: true, script: "echo $JOB_NAME").split('/')[-1].trim()
             currentWs = sh(returnStdout: true, script: 'pwd').trim()
             ansiblePlaybook = "$currentWs/kubernetes/ansible/deploy_longhorn.yml"
-            ansibleExtraArgs = "--vault-password-file /var/lib/jenkins/secrets/vault-pass -v"
+            ansibleExtraArgs = "--extra-vars \"role_name=${params.role_name}\" --vault-password-file /var/lib/jenkins/secrets/vault-pass"
             values.put('currentWs', currentWs)
             values.put('env', envDir)
             values.put('module', module)
