updated filestoreage service
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/kubernetes/helm_charts/sunbird-RC/filestorage/templates/deployment.yaml
+++ b/kubernetes/helm_charts/sunbird-RC/filestorage/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: {{ .Chart.Name }}-pvc
 spec:
-  storageClassName: oci-bv
+  storageClassName: {{ .Values.storage_class_name }}
   accessModes:
     - ReadWriteOnce
   resources:
