added certificateapi as chart
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm-chart/sunbird-rc/requirements.yaml
+++ b/helm-chart/sunbird-rc/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
-  # - name: certificateapi
-  #   version: 0.1.0
-  #   condition: certificateapi.enabled
+  - name: certificateapi
+    version: 0.1.0
+    condition: certificateapi.enabled
   # - name: certificatesign
   #   version: 0.1.0
   #   condition: certificatesign.enabled
