added certificatesign chart
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm-chart/sunbird-rc/requirements.yaml
+++ b/helm-chart/sunbird-rc/requirements.yaml
@@ -2,9 +2,9 @@ dependencies:
   - name: certificateapi
     version: 0.1.0
     condition: certificateapi.enabled
-  # - name: certificatesign
-  #   version: 0.1.0
-  #   condition: certificatesign.enabled
+  - name: certificatesign
+    version: 0.1.0
+    condition: certificatesign.enabled
   # - name: claim-ms
   #   version: 0.1.0
   #   condition: claim-ms.enabled
