--- a/helm-chart/sunbird-rc/values.yaml
+++ b/helm-chart/sunbird-rc/values.yaml
@@ -14,7 +14,12 @@ claim-ms:
     connectionInfo_password: ''
 
 elasticsearch:
-  enabled: false
+  enabled: false 
+  volumeClaimTemplate:
+    storageClassName: longhorn
+    resources:
+      requests:
+        storage: 5Gi
 
 filestorage:
   enabled: true
