added keycloak helm chart
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm-chart/sunbird-rc/requirements.yaml
+++ b/helm-chart/sunbird-rc/requirements.yaml
@@ -14,9 +14,9 @@ dependencies:
   - name: filestorage
     version: 0.1.0
     condition: filestorage.enabled
-  # - name: keycloak
-  #   version: 0.1.0
-  #   condition: keycloak.enabled
+  - name: keycloak
+    version: 0.1.0
+    condition: keycloak.enabled
   # - name: registry
   #   version: 0.1.0
   #   condition: registry.enabled
