added registry chart
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm-chart/sunbird-rc/requirements.yaml
+++ b/helm-chart/sunbird-rc/requirements.yaml
@@ -17,6 +17,6 @@ dependencies:
   - name: keycloak
     version: 0.1.0
     condition: keycloak.enabled
-  # - name: registry
-  #   version: 0.1.0
-  #   condition: registry.enabled
+  - name: registry
+    version: 0.1.0
+    condition: registry.enabled
