--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -6,7 +6,7 @@
     - option: listen_addresses
       value: "{{ ansible_default_ipv4.address }}"
   vars_files:
-    - ['{{inventory_dir}}/secrets.yml', 'secrets/{{env}}.yml']
+    - ['{{inventory_dir}}/secrets.yml']
   pre_tasks:
     - name: install setfacl support
       become: yes
