--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -12,7 +12,7 @@
       become: yes
       apt:
         name: ['acl', 'python3-psycopg2']
-  # roles:
-  #   - postgresql
+  roles:
+    - postgresql
   tags:
     - postgresql
