--- a/ansible/roles/postgresql-data-update/defaults/main.yml
+++ b/ansible/roles/postgresql-data-update/defaults/main.yml
@@ -7,95 +7,16 @@ postgresql_unix_socket_directories:
 
 ############# Postgres users and databases ###############
 postgresql_users:
-  - name: "{{kong_postgres_user}}"
-    login_password: "{{kong_postgres_password}}"
-    password: "{{postgres_password}}"
-    db: "{{kong_postgres_database}}"
-    login_user: "{{kong_postgres_user}}"
-    priv: "ALL"
-  - name: "{{keycloak_postgres_user}}"
-    login_password: "{{keycloak_postgres_password}}"
-    password: "{{postgres_password}}"
-    db: "{{keycloak_postgres_database}}"
-    login_user: "{{keycloak_postgres_user}}"
-    priv: "ALL"
-  - name: "{{application_postgres_user}}"
-    login_password: "{{application_postgres_password}}"
-    password: "{{postgres_password}}"
-    db: "{{application_postgres_database}}"
-    login_user: "{{application_postgres_user}}"
-    priv: "ALL"
-  - name: "{{user_org_service_postgres_user}}"
-    login_password: "{{user_org_service_postgres_password}}"
-    password: "{{user_org_service_postgres_password}}"
-    db: "{{user_org_service_postgres_database}}"
-    login_user: "{{user_org_service_postgres_user}}"
-    priv: "ALL"
-  - name: "{{enc_postgres_user}}"
-    login_password: "{{enc_postgres_password}}"
-    password: "{{enc_postgres_password}}"
-    db: "{{enc_postgres_database}}"
-    login_user: "{{enc_postgres_user}}"
-    priv: "ALL"
-  - name: "{{uci_postgres_user}}"
-    login_password: "{{uci_postgres_password}}"
-    password: "{{uci_postgres_password}}"
-    db: "{{uci_bot_postgres_database}}"
-    login_user: "{{uci_postgres_user}}"
-    priv: "ALL"
-  - name: "{{uci_postgres_user}}"
-    login_password: "{{uci_postgres_password}}"
-    password: "{{uci_postgres_password}}"
-    db: "{{uci_forms_postgres_database}}"
-    login_user: "{{uci_postgres_user}}"
-    priv: "ALL"
-  - name: "{{uci_postgres_user}}"
-    login_password: "{{uci_postgres_password}}"
-    password: "{{uci_postgres_password}}"
-    db: "{{uci_odk_postgres_database}}"
-    login_user: "{{uci_postgres_user}}"
-    priv: "ALL"
-  - name: "{{uci_postgres_user}}"
-    login_password: "{{uci_postgres_password}}"
-    password: "{{uci_postgres_password}}"
-    db: "{{uci_fusionauth_postgres_database}}"
-    login_user: "{{uci_postgres_user}}"
+  - name: postgres
+    login_password: "{{core_vault_dp_pgdb_password}}"
+    password: "{{core_vault_dp_pgdb_password}}"
+    db: registry
+    login_user: postgres
     priv: "ALL"
 
 postgresql_databases:
-  - name: "{{kong_postgres_database}}"
-    login_password: "{{kong_postgres_password}}"
-    owner: "{{kong_postgres_user}}"
-    login_user: "{{kong_postgres_user}}"
-  - name: "{{keycloak_postgres_database}}"
-    login_password: "{{keycloak_postgres_password}}"
-    owner: "{{keycloak_postgres_user}}"
-    login_user: "{{keycloak_postgres_user}}"
-  - name: "{{application_postgres_database}}"
-    login_password: "{{application_postgres_password}}"
-    owner: "{{application_postgres_user}}"
-    login_user: "{{application_postgres_user}}"
-  - name: "{{user_org_service_postgres_database}}"
-    login_password: "{{user_org_service_postgres_password}}"
-    owner: "{{user_org_service_postgres_user}}"
-    login_user: "{{user_org_service_postgres_user}}"
-  - name: "{{enc_postgres_database}}"
-    login_password: "{{enc_postgres_password}}"
-    owner: "{{enc_postgres_user}}"
-    login_user: "{{enc_postgres_user}}"
-  - name: "{{uci_bot_postgres_database}}"
-    login_password: "{{uci_postgres_password}}"
-    owner: "{{uci_postgres_user}}"
-    login_user: "{{uci_postgres_user}}"
-  - name: "{{uci_forms_postgres_database}}"
-    login_password: "{{uci_postgres_password}}"
-    owner: "{{uci_postgres_user}}"
-    login_user: "{{uci_postgres_user}}"
-  - name: "{{uci_odk_postgres_database}}"
-    login_password: "{{uci_postgres_password}}"
-    owner: "{{uci_postgres_user}}"
-    login_user: "{{uci_postgres_user}}"
-  - name: "{{uci_fusionauth_postgres_database}}"
-    login_password: "{{uci_postgres_password}}"
-    owner: "{{uci_postgres_user}}"
-    login_user: "{{uci_postgres_user}}"
+  - name: registry
+    login_password: "{{core_vault_dp_pgdb_password}}"
+    owner: "postgres"
+    login_user: postgres
+
