--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -1,6 +1,24 @@
+env: dev 
+namespace: "{{ env }}" 
+bootstrap_namespace: "{{ namespace }}"
+kubeconfig_path: /home/ubuntu/secrets/k8s.yaml
+
 core_vault_dp_pgdb_password: "postgres"
 core_vault_postgres_password: "postgres"
 core_vault_postgres_username: "postgres"
+
+# The proxy key and crt values should be padded to the right by a couple of spaces 
+# Example:
+# ssl_site_key: |+
+#    -----BEGIN PRIVATE KEY-----
+#    MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDFrWgCrQPHcZ2I
+#    UqvtIOY5lxlgU22+4BQbjMRN6NZn89AfWMUpRQOCoohPpTs0/JF+a20RI256gNkr
+#    yxm5BleKMv9dovAUjPElrdsWsBq9XOFDzN7GJnWpyB7oFYOoqrbRNrvL/dTP/op/
+#    -----END PRIVATE KEY-----
+ssl_site_key: |+
+
+ssl_site_crt: |+
+
 
 postgres:
   db_url: "{{ groups['postgres'][0] }}"
