updated reloader chart path
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/ansible/roles/bootstrap_k8s/tasks/main.yml
+++ b/ansible/roles/bootstrap_k8s/tasks/main.yml
@@ -39,6 +39,6 @@
       EOF
 
 - name: Installing reloader for configmaps reload
-  shell: helm upgrade --install --atomic reloader "{{ playbook_dir }}"/../helm_charts/core/reloader --namespace "{{ item }}" -f "{{ helm_file.path }}"
+  shell: helm upgrade --install --atomic reloader "{{ playbook_dir }}"/../helm_charts/reloader --namespace "{{ item }}" -f "{{ helm_file.path }}"
   with_items:
     - "{{ bootstrap_namespace.split(',') }}"
