added sunbird-rc helm chart
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -44,3 +44,12 @@ postgresql_databases:
     login_user: postgres
 
 postgres_users_no_log: false
+
+
+certificateapi_enabled: true
+certificatesign_enabled: false
+claim_ms_enabled: false
+elasticsearch_enabled: false
+filestorage_enabled: false
+keycloak_enabled: false
+registry_enabled: true
