--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -45,11 +45,11 @@ postgresql_databases:
 
 postgres_users_no_log: false
 
-
-certificateapi_enabled: true
-certificatesign_enabled: false
-claim_ms_enabled: false
-elasticsearch_enabled: false
-filestorage_enabled: false
-keycloak_enabled: false
-registry_enabled: true
+sunbird-rc:
+  certificateapi_enabled: true
+  certificatesign_enabled: false
+  claim_ms_enabled: false
+  elasticsearch_enabled: false
+  filestorage_enabled: false
+  keycloak_enabled: false
+  registry_enabled: true
