--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -45,7 +45,7 @@ postgresql_databases:
 
 postgres_users_no_log: false
 
-sunbird-rc:
+sunbird_rc:
   certificateapi_enabled: true
   certificatesign_enabled: false
   claim_ms_enabled: false
