updated certificate template
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -19,6 +19,9 @@ ssl_site_key: |+
 
 ssl_site_crt: |+
 
+CERTIFICATE_PUBLIC_KEY: |+
+
+CERTIFICATE_PRIVATE_KEY: |+
 
 postgres:
   db_url: "{{ groups['postgres'][0] }}"
@@ -53,3 +56,4 @@ sunbird_rc:
   filestorage_enabled: false
   keycloak_enabled: false
   registry_enabled: true
+
