--- a/ansible/roles/helm-deploy/defaults/main.yml
+++ b/ansible/roles/helm-deploy/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 #######################  SUnbird RC Variables ########################
-postgres_connectionInfo_uri: "jdbc:postgresql://{{ application_postgres_host }}:5432/registry"
+postgres_connectionInfo_uri: "jdbc:postgresql://{{groups['postgres'][0]}}:5432/registry"
 postgres_connectionInfo_username: "{{core_vault_postgres_username}}"
 connectionInfo_password: "{{ core_vault_postgres_password }}"
 elastic_search_connection_url: "{{ groups['es']|join(':9200,')}}:9200"
