--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -57,3 +57,7 @@ sunbird_rc:
   keycloak_enabled: false
   registry_enabled: true
 
+
+filestorage:
+  minio_root_user: admin
+  minio_root_password: admin1234
