--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -2,6 +2,7 @@ env: dev
 namespace: "{{ env }}" 
 bootstrap_namespace: "{{ namespace }}"
 kubeconfig_path: /home/ubuntu/secrets/k8s.yaml
+domain_name: demo.sunbirdrc.app.oci
 
 core_vault_dp_pgdb_password: "postgres"
 core_vault_postgres_password: "postgres"
@@ -61,3 +62,5 @@ sunbird_rc:
 filestorage:
   minio_root_user: admin
   minio_root_password: admin1234
+
+admin_api_secret: "change.my.password"
