--- a/ansible/roles/helm-deploy/defaults/main.yml
+++ b/ansible/roles/helm-deploy/defaults/main.yml
@@ -2,6 +2,12 @@
 #######################  SUnbird RC Variables ########################
 postgres_connectionInfo_uri: "jdbc:postgresql://{{groups['postgres'][0]}}:5432/registry"
 postgres_connectionInfo_username: "{{core_vault_postgres_username}}"
-connectionInfo_password: "{{ core_vault_postgres_password }}"
+postgres_connectionInfo_password: "{{ core_vault_postgres_password }}"
 elastic_search_connection_url: "{{ groups['es']|join(':9200,')}}:9200"
+
+keycloak:
+  admin_user: "admin"
+  admin_password: "password"
+  keycloak_logo_url: https://svgshare.com/i/hCs.svg
+  admin_api_secret: "{{admin_api_secret}}"
 #############################################################################
