--- a/ansible/roles/helm-deploy/defaults/main.yml
+++ b/ansible/roles/helm-deploy/defaults/main.yml
@@ -1,9 +1,11 @@
 ---
 #######################  SUnbird RC Variables ########################
-postgres_connectionInfo_uri: "jdbc:postgresql://{{groups['postgres'][0]}}:5432/registry"
+postgress_db_host: "{{groups['postgres'][0]}}"
+postgres_connectionInfo_uri: "jdbc:postgresql://postgress_db_host:5432/registry"
 postgres_connectionInfo_username: "{{core_vault_postgres_username}}"
 postgres_connectionInfo_password: "{{ core_vault_postgres_password }}"
-elastic_search_connection_url: "{{ groups['es']|join(':9200,')}}:9200"
+elastic_search_connection_url: "elasticsearch-master:9200"
+sunbird_sso_url: http://keycloak:8080/auth
 
 keycloak:
   admin_user: "admin"
