updated private secrets
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -56,7 +56,7 @@ sunbird_rc:
   elasticsearch_enabled: false
   filestorage_enabled: false
   keycloak_enabled: false
-  registry_enabled: true
+  registry_enabled: false
 
 
 filestorage:
