--- a/ansible/roles/helm-deploy/defaults/main.yml
+++ b/ansible/roles/helm-deploy/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 #######################  SUnbird RC Variables ########################
 postgress_db_host: "{{groups['postgres'][0]}}"
-postgres_connectionInfo_uri: "jdbc:postgresql://postgress_db_host:5432/registry"
+postgres_connectionInfo_uri: "jdbc:postgresql://{{postgress_db_host}}:5432/registry"
 postgres_connectionInfo_username: "{{core_vault_postgres_username}}"
 postgres_connectionInfo_password: "{{ core_vault_postgres_password }}"
 elastic_search_connection_url: "elasticsearch-master:9200"
