--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -24,6 +24,19 @@ CERTIFICATE_PUBLIC_KEY: |+
 
 CERTIFICATE_PRIVATE_KEY: |+
 
+## PostgreSQL config
+postgres_replication_user_name: "{{ core_vault_postgres_username }}"
+postgres_password: "{{ core_vault_postgres_password }}"
+postgres_address_space: "{{groups['postgresql-master'][0].split(\".\")[0]}}.0.0.0/8"
+
+postgresql_hba_entries:
+  - { type: local, database: all, user: postgres, auth_method: peer }
+  - { type: local, database: all, user: all, auth_method: peer }
+  - { type: host, database: all, user: all, address: '127.0.0.1/32', auth_method: md5 }
+  - { type: host, database: all, user: all, address: '::1/128', auth_method: md5 }
+  - { type: host, database: replication, user: "{{ postgres_replication_user_name }}", address: '{{ postgres_address_space }}', auth_method: md5 }
+  - { type: host, database: all, user: all, address: '0.0.0.0/0', auth_method: md5 }
+
 postgres:
   db_url: "{{ groups['postgres'][0] }}"
   db_username: postgres
