enabled switch for ingress
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -71,6 +71,9 @@ sunbird_rc:
   keycloak_enabled: false
   registry_enabled: false
 
+ingress_enabled: 
+  certificateapi: true
+  
 
 filestorage:
   minio_root_user: admin
